@@ -6,6 +6,7 @@ changes:
   - (bug #97385) Support heading IDs
   - (bug #97450) Support PRE and DIV
   - (bug #56769) Add newline after <br />
+  - Add support for MarkDown Extra table & dl extensions.
 
 date: 2009-03-16
 version: 0.05
